# axum-routing-htmx

./: Cargo.toml  README.md
axum-routing-htmx/: Cargo.toml
axum-routing-htmx-macros/: Cargo.toml
axum-routing-htmx-macros/src/: compilation.rs  lib.rs  parsing.rs
axum-routing-htmx/examples/: basic.rs
axum-routing-htmx/src/: lib.rs
axum-routing-htmx/tests/: main.rs
