[package]
name = "axum-routing-htmx-macros"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["axum", "routing", "htmx", "handler", "typed"]
categories = ["web-programming"]
description = "Typed routing macros for HTMX on axum"
readme = "../README.md"
repository = "https://github.com/BadMannersXYZ/axum-routing-htmx"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
axum = { version = "0.7", features = [] }
axum-routing-htmx = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"

[lib]
proc-macro = true