[package]
name = "axum-routing-htmx"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["axum", "routing", "htmx", "handler", "typed"]
categories = ["web-programming"]
description = "Typed routing macros for HTMX on axum"
readme = "../README.md"
repository = "https://github.com/BadMannersXYZ/axum-routing-htmx"

[dependencies]
axum = "0.7"
axum-macros = "0.4"
axum-routing-htmx-macros = { version = "0.2.0", path = "../axum-routing-htmx-macros" }
dyn-fmt = "0.4.3"
itertools = "0.13.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = { version = "14", features = [] }
serde = { version = "1", features = ["derive"] }
json = "0.12"
schemars = "0.8"
